--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,8 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=appmusica.keystore
+MYAPP_RELEASE_KEY_ALIAS=ayungan
+MYAPP_RELEASE_STORE_PASSWORD=12345678
+MYAPP_RELEASE_KEY_PASSWORD=12345678
+android.enableAapt2=false
